results/SpecGenBench/4-shot/log-MaxInArray-2023_11_28_00_03_07.txt
class MaxInArray {
    //@ requires arr != null;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; arr[i] <= \result);
    //@ ensures (\exists int i; 0 <= i && i < arr.length; arr[i] == \result);
    public int maxElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] <= res);
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
        //@ decreases a.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] > res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: variable i is already defined in method maxElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] <= res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] <= res);
                                                      ^
  symbol:   variable a
  location: class MaxInArray
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] <= res);
                                                                ^
  symbol:   variable a
  location: class MaxInArray
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:9: error: variable i is already defined in method maxElementInArray(int[])
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:9: error: cannot find symbol
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                                      ^
  symbol:   variable a
  location: class MaxInArray
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:9: error: cannot find symbol
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                                                ^
  symbol:   variable a
  location: class MaxInArray
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:10: error: cannot find symbol
        //@ decreases a.length - i;
                      ^
  symbol:   variable a
  location: class MaxInArray
7 errors

